--- a/resources.html
+++ b/resources.html
@@ -44,15 +44,16 @@
 				    <h4><a href="ligo.html">The Genius of LIGO’s Design</a></h4>
 				    <p>A breakdown of how LIGO overcomes noise to detect gravitational waves.</p>
 				  </div>
-				  <div class="card"> -->
+				   -->
 				  <div class="card">
 				    <h4><a href="quadrupole.html">The Enigma of Gravitational Radiation</a></h4>
 				    <p>Why gravitational waves start at the quadrupole — explained visually.</p>
 				  </div>
-				</div>
+				<div class="card">
 				    <h4><a href="eccentricity.html">Why Care About Eccentricities?</a></h4>
 				    <p>A physicist’s intuitive take on orbital eccentricity in compact binaries.</p>
 				  </div>
+				</div>
 
 						</header>
 					</div>
