--- a/resources.html
+++ b/resources.html
@@ -45,11 +45,11 @@
 				    <p>A breakdown of how LIGO overcomes noise to detect gravitational waves.</p>
 				  </div>
 				   -->
-				  <div class="card">
+				  <div class="card" style="--bg-img: url('figures/radiation.jpg');">
 				    <h4><a href="quadrupole.html">The Enigma of Gravitational Radiation</a></h4>
 				    <p>Why gravitational waves start at the quadrupole — explained visually.</p>
 				  </div>
-				<div class="card">
+				<div class="card" style="--bg-img: url('figures/eccentricity.gif');">
 				    <h4><a href="eccentricity.html">Why Care About Eccentricities?</a></h4>
 				    <p>A physicist’s intuitive take on orbital eccentricity in compact binaries.</p>
 				  </div>
