--- a/quadrupole.html
+++ b/quadrupole.html
@@ -38,6 +38,12 @@
                     <h2>Why Gravitational Radiation Starts at the Quadrupole</h2>
                     <p>Sanika Khadkikar — May 2025</p>
                 </header>
+                <blockquote style="font-style: italic; font-size: 1.2em; margin-top: 1em; position: relative; padding-left: 2em;">
+                    <span style="font-size: 2em; position: absolute; left: 0; top: 0; line-height: 1;">“</span>
+                    Out of intense complexities, intense simplicities emerge.
+                    <br>— Winston Churchill
+                </blockquote>
+
 
                 <section>
                     <p>I have always been absolutely awestruck by the fact that gravitational radiation can <strong>only</strong> be quadrupolar and never understood it quite intuitively until I took some time and found analogies and visualizations to understand it. I am documenting this for future reference for me and anyone who would find this useful. So let's begin!</p>
