--- a/eccentricity.html
+++ b/eccentricity.html
@@ -40,6 +40,12 @@
                     <h2>Eccentricities in Gravitational Wave Binaries</h2>
                     <p>Sanika Khadkikar — May 2025</p>
                 </header>
+                <div style="text-align: center; margin-top: 2em; margin-bottom: 2em;">
+                    <p style="font-style: italic; font-weight: bold; font-size: 1.3em; max-width: 700px; margin: 0 auto;">
+                        “The most exciting phrase to hear in science, the one that heralds new discoveries, is not ‘Eureka’ but ‘That’s funny...’”
+                    </p>
+                    <p style="font-style: italic; margin-top: 0.5em;">— Isaac Asimov</p>
+                </div>
 
                 <section>
                     <h3>Introduction</h3>
