--- a/quadrupole.html
+++ b/quadrupole.html
@@ -36,13 +36,13 @@
             <div class="container">
                 <header class="major">
                     <h2>Why Gravitational Radiation Starts at the Quadrupole</h2>
-                    <p>Sanika Khadkikar — May 2025</p>
+                <div style="text-align: center; margin-top: 2em; margin-bottom: 2em;">
+                    <p style="font-style: italic; font-weight: bold;">
+                        “Out of intense complexities, intense simplicities emerge”
+                    </p>
+                    <p style="font-style: italic; margin-top: 0.5em;">— Winston Churchill</p>
+                </div>
                 </header>
-                <blockquote style="font-style: italic; font-size: 1.2em; margin-top: 1em; position: relative; padding-left: 2em;">
-                    <span style="font-size: 2em; position: absolute; left: 0; top: 0; line-height: 1;">“</span>
-                    Out of intense complexities, intense simplicities emerge.
-                    <br>— Winston Churchill
-                </blockquote>
 
 
                 <section>
