--- a/resources.html
+++ b/resources.html
@@ -47,11 +47,11 @@
 				   -->
 				  <div class="card" style="--bg-img: url('figures/radiation.jpg');">
 				    <h4><a href="quadrupole.html">The Enigma of Gravitational Radiation</a></h4>
-<!-- 				    <p>Why gravitational waves start at the quadrupole — explained visually.</p> -->
+				    <p>Why is the leading order contribution to gravitational waves from the quadrupole moment of mass?</p>
 				  </div>
 				<div class="card" style="--bg-img: url('figures/eccentricity.gif');">
 				    <h4><a href="eccentricity.html">Why Care About Eccentricities?</a></h4>
-<!-- 				    <p>A physicist’s intuitive take on orbital eccentricity in compact binaries.</p> -->
+				    <p>Orbital eccentricity and its impact on gravitational radiation from compact binaries mergers.</p>
 				  </div>
 				</div>
 
