--- a/resources.html
+++ b/resources.html
@@ -45,12 +45,16 @@
 				    <p>A breakdown of how LIGO overcomes noise to detect gravitational waves.</p>
 				  </div>
 				   -->
+				<div class="card" style="--bg-img: url('figures/radiation.jpg');">
+				    <h4><a href="blog/whiten.html">Beautifying Noise</a></h4>
+				    <p>Steps to treat LIGO detector data to see the gravitational wave signal amidst a chunk of noisy data!</p>
+				  </div>
 				  <div class="card" style="--bg-img: url('figures/radiation.jpg');">
-				    <h4><a href="quadrupole.html">The Enigma of Gravitational Radiation</a></h4>
+				    <h4><a href="blog/quadrupole.html">The Enigma of Gravitational Radiation</a></h4>
 				    <p>Why is the leading order contribution to gravitational waves from the quadrupole moment of mass?</p>
 				  </div>
 				<div class="card" style="--bg-img: url('figures/eccentricity.gif');">
-				    <h4><a href="eccentricity.html">Why Care About Eccentricities?</a></h4>
+				    <h4><a href="blog/eccentricity.html">Why Care About Eccentricities?</a></h4>
 				    <p>Orbital eccentricity and its impact on gravitational radiation from compact binaries mergers.</p>
 				  </div>
 				</div>
