--- a/resources.html
+++ b/resources.html
@@ -61,6 +61,27 @@
 
 						</header>
 					</div>
+				</div
+				<div id="main" class="wrapper style1">
+					<div class="container">
+						<header class="major">
+							<h3>Surviving a PhD</h3>
+<!-- 							<li><a href="ligo.html"> The Genius of LIGO’s Design</a> </li>
+							<li><a href="eccentricity.html"> Why care about eccentricities? </a> </li>
+							<li><a href="quadrupole.html"> The Enigma of Gravitational Radiation </a> </li> -->
+				<div class="resource-grid">
+<!-- 				  <div class="card">
+				    <h4><a href="ligo.html">The Genius of LIGO’s Design</a></h4>
+				    <p>A breakdown of how LIGO overcomes noise to detect gravitational waves.</p>
+				  </div>
+				   -->
+				<div class="card" style="--bg-img: url('figures/radiation.jpg');">
+				    <h4><a href="blog/whiten.html">Just another fish in the sea</a></h4>
+				    <p>Imposter syndrome in academia</p>
+				  </div>
+
+						</header>
+					</div>
 				</div>
 
 			<!-- Footer -->
