--- a/resources.html
+++ b/resources.html
@@ -46,7 +46,7 @@
 				  </div>
 				   -->
 				<div class="card" style="--bg-img: url('figures/radiation.jpg');">
-				    <h4><a href="blog/whiten.html">Beautifying Noise</a></h4>
+				    <h4><a href="blog/whiten.html">That One Chirp Amidst Noise</a></h4>
 				    <p>Steps to treat LIGO detector data to see the gravitational wave signal amidst a chunk of noisy data!</p>
 				  </div>
 				  <div class="card" style="--bg-img: url('figures/radiation.jpg');">
